// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/FileAttachment should match snapshot, after change from file to image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image normal"
      style={
        Object {
          "backgroundImage": "url(/api/v4/files/2/thumbnail)",
          "backgroundSize": "cover",
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "png",
          "height": 400,
          "id": 2,
          "name": "test.png",
          "size": 100,
          "width": 600,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.png"
        href="/api/v4/files/2"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PNG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, file with long name 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "a-quite-long-filename-to-test-the-filename-shortener.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="a-quite-long-filename-to-test-the-filename-shortener.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, regular file 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, regular image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image normal"
      style={
        Object {
          "backgroundImage": "url(/api/v4/files/1/thumbnail)",
          "backgroundSize": "cover",
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "png",
          "height": 400,
          "id": 1,
          "name": "test.png",
          "size": 100,
          "width": 600,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.png"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PNG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, small image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image small"
      style={
        Object {
          "backgroundImage": "url(/api/v4/files/1/thumbnail)",
          "backgroundSize": "cover",
        }
      }
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "png",
          "height": 16,
          "id": 1,
          "name": "test.png",
          "size": 100,
          "width": 16,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.png"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PNG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, svg image 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <img
      className="post-image normal"
      src="/api/v4/files/1"
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "svg",
          "height": 400,
          "id": 1,
          "name": "test.svg",
          "size": 100,
          "width": 600,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.svg"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        SVG
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, when file is not loaded 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="post-image__load"
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, with compact display 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={true}
      compactDisplay={true}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <a
        className="post-image__download"
        download="test.pdf"
        href="/api/v4/files/1"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="fa fa-download"
        />
      </a>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;

exports[`component/FileAttachment should match snapshot, without compact display and without can download 1`] = `
<div
  className="post-image__column"
>
  <a
    className="post-image__thumbnail"
    href="#"
    onClick={[Function]}
  >
    <div
      className="file-icon pdf"
    />
  </a>
  <div
    className="post-image__details"
  >
    <FilenameOverlay
      canDownload={false}
      fileInfo={
        Object {
          "extension": "pdf",
          "id": 1,
          "name": "test.pdf",
          "size": 100,
        }
      }
      handleImageClick={[Function]}
      index={3}
    />
    <div>
      <span
        className="post-image__type"
      >
        PDF
      </span>
      <span
        className="post-image__size"
      >
        100B
      </span>
    </div>
  </div>
</div>
`;
